init app with csr, ssr and ssg.

--- a/angular.json
+++ b/angular.json
@@ -10,6 +10,15 @@
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
+        "prerender": {
+          "options": {
+            "routes": [
+              "/home",
+              "/",
+              "company"
+            ]
+          }
+        },
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
@@ -97,5 +106,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
